# apalis-board

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  package-lock.json  package.json
.github/: CI_CD_INFRASTRUCTURE.md  dependabot.yml  labeler.yml  markdown-link-check-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: cache-warmup.yml  ci.yml  coverage.yml  docs.yml  frontend-build.yml  labeler.yml  nodejs.yml  release.yml  rust-ci.yml  security.yml
crates/api/: Cargo.toml  dist
crates/api/src/: builder.rs  lib.rs  logger.rs  sse.rs
crates/api/src/framework/: actix.rs  axum.rs  mod.rs
crates/api/src/sse/: broadcaster.rs  client.rs  mod.rs  subscriber.rs
crates/api/src/ui/: mod.rs
crates/board/: Cargo.toml  index.html  tailwind.config.js
crates/board/locales/: en.json
crates/board/src/: api.rs  lib.rs  main.rs  translate.rs
crates/board/src/components/: layout.rs  mod.rs  not_found.rs  pagination.rs  sidebar.rs  tailwind.rs
crates/board/src/pages/: logs.rs  mod.rs
crates/board/src/pages/home/: mod.rs
crates/board/src/pages/queues/: index.rs  mod.rs  provider.rs  single.rs  status.rs
crates/board/src/pages/tasks/: index.rs  mod.rs  provider.rs  single.rs
crates/board/src/pages/workers/: capability.rs  index.rs  mod.rs  provider.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  sse.rs
crates/web/: Cargo.toml  Trunk.toml  index.html
crates/web/src/: api.rs  config.rs  lib.rs  main.rs  translate.rs
crates/web/src/components/: icon.rs  pagination.rs  sidebar.rs  tailwind.rs
crates/web/src/pages/home/: mod.rs
crates/web/src/pages/queues/: mod.rs  provider.rs  single.rs
crates/web/src/pages/tasks/: provider.rs  single.rs
crates/web/src/pages/workers/: capability.rs  provider.rs
examples/actix-ntfy-service/: Cargo.toml  README.md
examples/actix-ntfy-service/src/: cli.rs  main.rs  notification.rs
examples/axum-email-service/: Cargo.toml  README.md
examples/axum-email-service/src/: cli.rs  main.rs
examples/rest-api/: Cargo.toml
examples/rest-api/src/: api.rs  logger.rs  main.rs
src/: actix.rs  axum.rs  lib.rs  web.rs
supply-chain/: config.toml
