[package]
name = "apalis-board-api"
version = "0.1.0"
edition = "2024"

[dependencies]
apalis-core = { version = "1.0.0-alpha.4", features = ["serde"] }
apalis-board-types = { path = "../types" }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing-subscriber = { version = "0.3.11", features = ["json", "env-filter"] }

actix-web = { version = "4.5.1", optional = true }
actix-web-lab = { version = "0.24.3", optional = true }

axum = { version = "0.8", optional = true, features = [
    "json",
    "tokio",
    "query",

], default-features = false }

[features]
default = []
actix = ["dep:actix-web", "dep:actix-web-lab"]
axum = ["dep:axum"]
