[package]
name = "apalis-board-api"
version = "1.0.0-alpha.1"
edition = "2024"
description = "HTTP utilities for managing apalis task queues."
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/apalis-dev/apalis-board"
homepage = "https://github.com/apalis-dev/apalis-board"
documentation = "https://docs.rs/apalis-board-api"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
keywords = ["apalis", "api", "http"]
categories = ["asynchronous"]
include = ["src/**", "Cargo.toml", "LICENSE*", "README.md"]
publish = true


[dependencies]
apalis-core = { version = "1.0.0-alpha.4", features = ["serde"] }
apalis-board-types = { path = "../types", version = "1.0.0-alpha.1" }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", default-features = false, features = ["sync"] }
serde_json = "1"
tracing-core = { version = "0.1.34", optional = true }
tracing-subscriber = { version = "0.3.20", features = [
    "json",
    "env-filter",
], optional = true }
include_dir = { version = "0.7.4", optional = true }

actix-web = { version = "4.5.1", optional = true }
actix-web-lab = { version = "0.24.3", optional = true }

axum = { version = "0.8", optional = true, features = [
    "json",
    "tokio",
    "query",

], default-features = false }

[features]
default = ["sse", "ui"]
actix = ["dep:actix-web", "dep:actix-web-lab"]
axum = ["dep:axum"]
sse = ["dep:tracing-core", "dep:tracing-subscriber"]
ui = ["dep:include_dir"]
