[package]
name = "apalis-board-api"
version = "1.0.0-rc.7"
edition = "2024"
description = "HTTP utilities for managing apalis task queues."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/apalis-dev/apalis-board"
homepage = "https://github.com/apalis-dev/apalis-board"
documentation = "https://docs.rs/apalis-board-api"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
keywords = ["apalis", "api", "http"]
categories = ["asynchronous"]
include = ["src/**", "Cargo.toml", "LICENSE*", "README.md", "dist/**"]
publish = true


[dependencies]
apalis-core = { version = "1.0.0-rc.7", features = ["serde"] }
apalis-board-types.workspace = true
serde = { workspace = true, features = ["derive"] }
futures.workspace = true
tokio = { version = "1", default-features = false, features = ["sync"] }
serde_json.workspace = true
tracing-core = { version = "0.1.34", optional = true }
tracing-subscriber = { workspace = true, features = [
    "json",
    "env-filter",
], optional = true }
include_dir = { version = "0.7.4", optional = true }
thiserror = { workspace = true, optional = true }
actix-web = { workspace = true, optional = true }
actix-web-lab = { version = "0.24.3", optional = true }
axum = { version = "0.8", optional = true, features = [
    "json",
    "tokio",
    "query",
], default-features = false }

[features]
default = ["sse", "ui"]
actix = ["dep:actix-web", "dep:actix-web-lab"]
axum = ["dep:axum", "dep:thiserror"]
sse = ["dep:tracing-core", "dep:tracing-subscriber"]
ui = ["dep:include_dir"]

[package.metadata.docs.rs]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[lints]
workspace = true
