[package]
name = "apalis-board"
version = "1.0.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apalis-core = { version = "1.0.0-alpha.7", features = [
    "serde",
], default-features = false }
apalis-board-types = { path = "../types" }
# web-sys = { version = "0.3", features = ["EventSource"] }
gloo-net = { version = "0.6" }
serde_json = "1"
# console_log = { version = "1", features = ["color"] }
# log = "0.4"
serde = "1"
leptos = { version = "0.8.9", features = ["csr"], default-features = false }
leptos_router = "0.8.9"
gloo-timers = "0.3.0"
leptos-struct-table = "0.15.0"
web-sys = "0.3"
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
leptos_i18n = "0.6.0-rc.2"
leptos_meta = "0.8.5"


[package.metadata.leptos-i18n]
default = "en"
locales = ["en"] # add more supported locales here
