[package]
name = "apalis-board"
version = "1.0.0-alpha.2"
edition = "2024"
description = "Frontend components for managing Apalis task queues."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/apalis-dev/apalis-board"
homepage = "https://github.com/apalis-dev/apalis-board"
documentation = "https://docs.rs/apalis-board"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
keywords = ["apalis", "board", "frontend", "leptos"]
categories = ["asynchronous"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*", "locales/**"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apalis-core = { version = "1.0.0-alpha.8", features = [
    "serde",
], default-features = false }
apalis-board-types = { path = "../types", version = "1.0.0-alpha.2" }
gloo-net = { version = "0.5" }
serde_json = "1"
serde = "1"
leptos = { version = "0.8.9", features = ["csr"], default-features = false }
leptos_router = "0.8.7"
gloo-timers = { version = "0.3.0", features = ["futures"] }
leptos-struct-table = { version = "0.15.0" }
web-sys = "0.3"
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
leptos_i18n = "0.6.0-rc.2"
leptos_meta = "0.8.5"


[package.metadata.leptos-i18n]
default = "en"
locales = ["en"] # add more supported locales here
