[package]
name = "apalis-board-types"
version = "1.0.0-rc.7"
edition = "2024"
description = "Shared types and data structures used by the apalis-board workspace."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/apalis-dev/apalis-board"
homepage = "https://github.com/apalis-dev/apalis-board"
documentation = "https://docs.rs/apalis-board-types"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
keywords = ["apalis", "types"]
categories = ["asynchronous"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[package.metadata.docs.rs]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[lints]
workspace = true
