[package]
name = "ntfy-sh-actix-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apalis-core = { version = "1.0.0-alpha.7", features = ["serde"] }
apalis-sql = { version = "1.0.0-alpha.7" }
apalis = { version = "1.0.0-alpha.7", features = ["limit", "retry"] }
apalis-sqlite = { features = [
    "migrate",
    "tokio-comp",
], version = "1.0.0-alpha.3" }
apalis-board-types = { path = "../../crates/types" }
apalis-board-api = { path = "../../crates/api", features = ["actix"] }

actix-web = "4.5.1"
actix-web-actors = "4.3.0"
actix = "0.13.3"
actix-files = "0.6.6"
actix-cors = "0.7"

serde = "1"
env_logger = "0.11"
futures = "0.3"
tower = "0.5"
tokio = { version = "1", features = ["full"] }
log = "0.4"
serde_json = "1"
tracing-subscriber = { version = "0.3.11", features = ["json", "env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5.49", features = ["derive"] }
