[package]
name = "ntfy-sh-actix-example"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apalis-core = { version = "1.0.0-rc.1", features = ["serde"] }
apalis-sql = { version = "1.0.0-rc.1" }
apalis = { version = "1.0.0-rc.1", features = ["limit", "retry"] }
apalis-sqlite = { features = [
    "migrate",
    "tokio-comp",
], version = "1.0.0-rc.1" }
apalis-board = { path = "../../", features = ["actix"] }
actix-web = "4.5.1"
serde = "1"
futures = "0.3"
tower = "0.5"
tokio = { version = "1", features = ["full"] }
log = "0.4"
serde_json = "1"
tracing-subscriber = { version = "0.3.11", features = ["json", "env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5.54", features = ["derive"] }
