[package]
name = "ntfy-sh-actix-example"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apalis-core = { version = "1.0.0-rc.7", features = ["serde"] }
apalis-sql.workspace = true
apalis = { workspace = true, features = ["limit", "retry"] }
apalis-sqlite = { workspace = true, features = ["migrate", "tokio-comp"] }
apalis-board = { path = "../../", features = [
    "actix",
    "ui",
] } # Replace path with version
actix-web.workspace = true
serde.workspace = true
futures.workspace = true
tower.workspace = true
tokio = { version = "1", features = ["full"] }
log.workspace = true
serde_json.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
reqwest = { version = "0.13", features = ["json"] }
clap.workspace = true
