[package]
name = "axum-email-service"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
apalis-core = { version = "1.0.0-rc.2", features = ["serde"] }
apalis = { version = "1.0.0-rc.2", features = ["limit", "retry"] }
apalis-sql = { version = "1.0.0-rc.2" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
apalis-postgres = { version = "1.0.0-rc.2", features = [
    "migrate",
    "tokio-comp",
] }
apalis-board = { path = "../../", features = ["axum"] }
serde = "1"
futures = "0.3"
tower = "0.5"
tokio = { version = "1", features = ["full"] }
log = "0.4"
serde_json = "1"
tracing-subscriber = { version = "0.3.11", features = ["json", "env-filter"] }
clap = { version = "4.5.49", features = ["derive"] }
lettre = { version = "0.11.19", features = [
    "tracing",
    "builder",
    "smtp-transport",
    "tokio1",
    "tokio1-native-tls",
] }

axum = { version = "0.8", features = ["json", "tokio", "query"] }
tower-http = { version = "0.6.6", features = ["fs", "normalize-path"] }
rmp-serde = "1.3.0"
thiserror = "2.0"
