[package]
name = "axum-email-service"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
apalis-core = { version = "1.0.0-rc.7", features = ["serde"] }
apalis = { workspace = true, features = ["limit", "retry"] }
apalis-sql.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
apalis-postgres = { workspace = true, features = [
    "migrate",
    "tokio-comp",
] }
apalis-board = { path = "../../", features = [
    "axum",
] } # Replace path with version
serde.workspace = true
futures.workspace = true
tower.workspace = true
tokio = { version = "1", features = ["full"] }
log.workspace = true
serde_json.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
clap.workspace = true
lettre = { version = "0.11.19", features = [
    "tracing",
    "builder",
    "smtp-transport",
    "tokio1",
    "tokio1-native-tls",
] }
axum = { version = "0.8", features = ["json", "tokio", "query"] }
rmp-serde = "1.3.0"
thiserror.workspace = true
