[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apalis = { version = "0.6", features = ["limit"] }
apalis-redis = { version = "0.6" }
apalis-sql = { version = "0.6", features = ["sqlite"] }
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
actix = "0.13.3"
apalis-board-utils = { path = "../../crates/utils" }
serde = "1"
env_logger = "0.11"
futures = "0.3"
actix-cors = "0.7"
tower = "0.5"
apalis-core = { version = "0.6" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
actix-files = "0.6.6"
serde_json = "1"
tracing-subscriber = { version = "0.3.11", features = ["json", "env-filter"] }
